--- a/component/card/card.css
+++ b/component/card/card.css
@@ -2,6 +2,7 @@
 
 .card {
   width: 20rem;
+  height: 26.5rem;
   border-radius: 0.5rem;
   overflow: hidden;
   flex-direction: column;
@@ -34,6 +35,13 @@
   margin: 10px 0;
 }
 
+.card-content p {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
 .card-head,
 .card-foot,
 .card-content {
@@ -57,6 +65,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   width: 40rem;
+  max-height: 240px;
 }
 
 .card-horizontal .image-container {
@@ -72,6 +81,13 @@
   align-items: center;
 }
 
+.card-horizontal .card-content p {
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
 .card-text-overlay {
   position: absolute;
   opacity: 1;
@@ -83,7 +99,6 @@
   justify-content: center;
 }
 
-/* .card-horizontal.card-text-overlay {
-  grid-column: 1 / span2;
-  grid-row: 1 / span3;
-} */
+.card-only-text {
+  height: fit-content;
+}
